--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pos-merchant-management",
+  "homepage": "https:://kiminonawa48.github.io/demo-pos-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,13 +8,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeloy": "yarn build",
+    "deploy": "gh-page -d dist"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.72.0",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "gh-pages": "^6.3.0",
     "moment": "^2.30.1",
     "ol": "^10.5.0",
     "path": "^0.12.7",
