--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.72.0",
+    "@types/react-i18next": "^8.1.0",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "gh-pages": "^6.3.0",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "moment": "^2.30.1",
     "ol": "^10.5.0",
     "path": "^0.12.7",
@@ -25,6 +29,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.5.0",
     "vite-plugin-vercel": "^9.0.5"
   },
