--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-VITE_BASE_URL_API=http://localhost:3000
-# File image
-VITE_URL_API_FILE=http://localhost:3000/file
+VITE_BASE_PATH='/'
+VITE_API_URL="https://jsonplaceholder.typicode.com"
+VITE_API_KEY="your_api_key_here"
