--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Content-Security-Policy = "default-src 'self'; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://*.openstreetmap.org"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  
