--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
-  
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = "default-src 'self'; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://*.openstreetmap.org"
